src/objects/Trainee__c.object
<CustomObject>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mentor_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor name</label>
        <referenceTo>Mentor__c</referenceTo>
        <relationshipLabel>Trainees</relationshipLabel>
        <relationshipName>Trainees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trainee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trainee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>